Fixed styles in the Internet Explorer browser. Issue: https://code.google.com/p/gwt-cropper/issues/detail?id=4

--- a/src/main/java/com/google/code/gwt/crop/client/GWTCropperTablet.css
+++ b/src/main/java/com/google/code/gwt/crop/client/GWTCropperTablet.css
@@ -15,6 +15,7 @@
 	border: 2px dashed white;
 	z-index: 1;
 }
+.selectionDraggableBackground{}
 
 .handlesContainer {
 	overflow: visible;
